# test

./: Dockerfile  README.md  main.py  pyproject.toml  redis.py  redis_service.py  requirements.txt  test_redis.py
.github/workflows/: deploy.yaml
app/: main.py
app/config/: settigns.py
app/routers/: redis_router.py
app/services/: binance_consumer_service.py  redis_service.py
tests/: test_redis.py
