[tool.poetry]
name = "Challenge"
version = "0.1.0"
description = "This service connects to the Binance WebSocket stream and publishes the data to a Redis stream."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
redis = "^4.3.4"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
black = "^23.3.2"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
coverage = "^7.1.0"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "*.mypy_cache/*",
    "*.pytest_cache/*",
    "*.github/*",
    "*.idea/*",
    "*tests/*",
    "*app/config/settings.py"
]
source = [
    "app"
]

[tool.coverage.report]
skip_empty = true
fail_under = 100
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
